Fixed_alignment_andAddedTitles

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,14 +1,31 @@
-.gif {
-    float: left;
-    flex: 33.33%;
-    padding: 5px;
-  }
-  body {
-    background-color: #212129;
+.item{
+  float: left;
 }
- #body{
-   background-color: lightslategrey;
+.gif {
+    
+    float: left;
+    padding: 2px;
+    
+  }
+ .gif-title{
+   
+   color: white;
+   padding: 2px;
  }
+  .gif-rating{
+    
+    color: white;
+    padding: 2px;
+  }
+ body {
+    background-color: #212129;
+    
+  }
+ #body{
+ 
+    background-color: lightslategrey;
+    
+  }
 
  .pick {
    background-color: rgba(27, 38, 47, 0.226);
@@ -25,3 +42,9 @@
   width: 150px;
  
  }
+
+ @media screen and (max-width: 500px) {
+  .column {
+    width: 100%;
+  }
+}
